--- a/linux-x64/Dockerfile
+++ b/linux-x64/Dockerfile
@@ -7,7 +7,7 @@ MAINTAINER Lovell Fuller <npm@lovell.info>
 RUN \
   echo "deb http://ftp.debian.org/debian wheezy-backports main" | tee /etc/apt/sources.list.d/wheezy-backports.list && \
   apt-get update && \
-  apt-get install -y build-essential autoconf libtool nasm gtk-doc-tools texinfo gperf advancecomp && \
+  apt-get install -y build-essential gcc-4.9-backport prelink autoconf libtool nasm gtk-doc-tools texinfo gperf advancecomp && \
   apt-get -t wheezy-backports install -y jq && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y
 
