Use Alpine Edge for latest rustc for latest libsrvg

--- a/linuxmusl-x64/Dockerfile
+++ b/linuxmusl-x64/Dockerfile
@@ -1,18 +1,18 @@
-FROM alpine:3.8
+FROM alpine:edge
 MAINTAINER Lovell Fuller <npm@lovell.info>
 
-# Create Alpine 3.8 (musl 1.1.19) container suitable for building Linux x64 binaries
+# Create Alpine edge/3.9 (musl 1.1.20) container suitable for building Linux x64 binaries
 
 # Build dependencies
 RUN \
-  apk update && \
-  apk upgrade && \
-  apk --update --no-cache --repository https://dl-3.alpinelinux.org/alpine/edge/testing/ add \
-    build-base curl git autoconf automake libtool intltool shared-mime-info nasm gtk-doc texinfo gperf advancecomp glib-dev gobject-introspection-dev findutils jq cargo
+  apk update && apk upgrade && \
+  apk --update --no-cache add \
+    build-base curl git autoconf automake libtool intltool shared-mime-info nasm gtk-doc \
+    texinfo gperf glib-dev gobject-introspection-dev findutils jq linux-headers && \
+  apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/community/ add cargo && \
+  apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/testing/ add advancecomp
 
 # Compiler settings
-# RUST_OPT_LEVEL override can be removed when Alpine 3.9 is minimum supported
 ENV \
   PLATFORM="linuxmusl-x64" \
-  FLAGS="-O3" \
-  RUST_OPT_LEVEL="2"
+  FLAGS="-O3"
