--- a/linux-x64/Dockerfile
+++ b/linux-x64/Dockerfile
@@ -8,7 +8,7 @@ RUN \
   echo "deb http://ftp.debian.org/debian wheezy-backports main" | tee /etc/apt/sources.list.d/wheezy-backports.list && \
   apt-get update && \
   apt-get install -y build-essential gcc-4.9-backport prelink autoconf libtool nasm gtk-doc-tools texinfo gperf advancecomp libglib2.0-dev gobject-introspection && \
-  apt-get -t wheezy-backports install -y jq && \
+  apt-get -t wheezy-backports install -y jq cmake && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y
 
 # Compiler settings
@@ -16,3 +16,5 @@ ENV \
   PATH="/root/.cargo/bin:$PATH" \
   PLATFORM="linux-x64" \
   FLAGS="-O3"
+
+COPY Toolchain.cmake /root/
