--- a/linux-armv8/Dockerfile
+++ b/linux-armv8/Dockerfile
@@ -9,7 +9,7 @@ RUN \
   apt-get install -y curl && \
   dpkg --add-architecture arm64 && \
   apt-get update && \
-  apt-get install -y crossbuild-essential-arm64 autoconf libtool nasm gtk-doc-tools texinfo gperf advancecomp libglib2.0-dev jq gettext intltool autopoint && \
+  apt-get install -y crossbuild-essential-arm64 autoconf libtool nasm gtk-doc-tools texinfo gperf advancecomp libglib2.0-dev jq gettext intltool autopoint cmake && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y && \
   ~/.cargo/bin/rustup target add aarch64-unknown-linux-gnu
 
@@ -19,3 +19,5 @@ ENV \
   PLATFORM="linux-armv8" \
   CHOST="aarch64-linux-gnu" \
   FLAGS="-march=armv8-a -Os -D_GLIBCXX_USE_CXX11_ABI=0"
+
+COPY Toolchain.cmake /root/
