--- a/linuxmusl-x64/Dockerfile
+++ b/linuxmusl-x64/Dockerfile
@@ -8,7 +8,7 @@ RUN \
   apk update && apk upgrade && \
   apk --update --no-cache add \
     build-base curl git autoconf automake libtool intltool shared-mime-info nasm gtk-doc \
-    texinfo gperf glib-dev gobject-introspection-dev findutils jq linux-headers && \
+    texinfo gperf glib-dev gobject-introspection-dev findutils jq linux-headers cmake && \
   apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/community/ add cargo && \
   apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/testing/ add advancecomp
 
@@ -16,3 +16,5 @@ RUN \
 ENV \
   PLATFORM="linuxmusl-x64" \
   FLAGS="-O3"
+
+COPY Toolchain.cmake /root/
