--- a/linux-armv7/Dockerfile
+++ b/linux-armv7/Dockerfile
@@ -9,15 +9,18 @@ RUN \
   apt-get install -y curl && \
   dpkg --add-architecture armhf && \
   apt-get update && \
-  apt-get install -y crossbuild-essential-armhf autoconf libtool nasm gtk-doc-tools texinfo gperf advancecomp libglib2.0-dev jq gettext intltool autopoint cmake && \
+  apt-get install -y crossbuild-essential-armhf autoconf libtool nasm gtk-doc-tools texinfo gperf advancecomp libglib2.0-dev jq gettext intltool autopoint cmake python3-pip ninja-build && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y && \
-  ~/.cargo/bin/rustup target add arm-unknown-linux-gnueabihf
+  ~/.cargo/bin/rustup target add arm-unknown-linux-gnueabihf && \
+  pip3 install meson
 
 # Compiler settings
 ENV \
   PATH="/root/.cargo/bin:$PATH" \
   PLATFORM="linux-armv7" \
   CHOST="arm-linux-gnueabihf" \
-  FLAGS="-marm -march=armv7-a -mfpu=neon-vfpv4 -mfloat-abi=hard -Os -D_GLIBCXX_USE_CXX11_ABI=0"
+  FLAGS="-marm -march=armv7-a -mfpu=neon-vfpv4 -mfloat-abi=hard -Os -D_GLIBCXX_USE_CXX11_ABI=0" \
+  MESON="--cross-file=/root/meson.ini"
 
 COPY Toolchain.cmake /root/
+COPY meson.ini /root/
