--- a/linuxmusl-x64/Dockerfile
+++ b/linuxmusl-x64/Dockerfile
@@ -8,9 +8,10 @@ RUN \
   apk update && apk upgrade && \
   apk --update --no-cache add \
     build-base curl git autoconf automake libtool intltool shared-mime-info nasm gtk-doc \
-    texinfo gperf glib-dev gobject-introspection-dev findutils jq linux-headers cmake && \
-  apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/community/ add cargo && \
-  apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/testing/ add advancecomp
+    texinfo gperf glib-dev gobject-introspection-dev findutils jq linux-headers cmake binutils python3 ninja && \
+  apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/v3.10/community/ add cargo && \
+  apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/testing/ add advancecomp && \
+  pip3 install meson
 
 # Compiler settings
 ENV \
