--- a/linux-armv7/Dockerfile
+++ b/linux-armv7/Dockerfile
@@ -9,7 +9,7 @@ RUN \
   apt-get install -y curl && \
   dpkg --add-architecture armhf && \
   apt-get update && \
-  apt-get install -y crossbuild-essential-armhf autoconf libtool nasm gtk-doc-tools texinfo gperf advancecomp libglib2.0-dev jq gettext intltool autopoint cmake python3-pip ninja-build && \
+  apt-get install -y crossbuild-essential-armhf autoconf libtool nasm gtk-doc-tools texinfo gperf advancecomp libglib2.0-dev jq gettext intltool autopoint cmake python3-pip ninja-build patchelf && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y && \
   ~/.cargo/bin/rustup target add arm-unknown-linux-gnueabihf && \
   pip3 install meson
