--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -37,6 +37,7 @@ jobs:
           - 'linux-armv6'
           - 'linux-armv7'
           - 'linux-arm64v8'
+          - 'win32-ia32'
           - 'win32-x64'
     steps:
     - uses: actions/checkout@v1
