--- a/linuxmusl-x64/Dockerfile
+++ b/linuxmusl-x64/Dockerfile
@@ -9,13 +9,19 @@ RUN \
   apk --update --no-cache add \
     build-base curl git autoconf automake libtool intltool shared-mime-info nasm gtk-doc \
     texinfo gperf glib-dev gobject-introspection-dev findutils jq linux-headers cmake binutils python3 ninja patchelf && \
-  apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/v3.11/community/ add cargo && \
   apk --update --no-cache --repository https://alpine.global.ssl.fastly.net/alpine/edge/community/ add advancecomp && \
+  curl https://sh.rustup.rs -sSf | sh -s -- -y && \
   pip3 install meson
 
 # Compiler settings
 ENV \
+  PATH="/root/.cargo/bin:$PATH" \
   PLATFORM="linuxmusl-x64" \
-  FLAGS="-O3"
+  FLAGS="-s -O3 -fPIC"
+
+# Musl defaults to static libs but we need them to be dynamic for host toolchain.
+# The toolchain will produce static libs by default.
+ENV \
+  RUSTFLAGS="-C target-feature=-crt-static"
 
 COPY Toolchain.cmake /root/
