--- a/linux-armv6/Dockerfile
+++ b/linux-armv6/Dockerfile
@@ -31,6 +31,8 @@ RUN \
   mkdir /root/tools && \
   curl -Ls https://github.com/rvagg/rpi-newer-crosstools/archive/master.tar.gz | tar xzC /root/tools --strip-components=1 && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y && \
+  # Downgrade to 1.43.0, see: https://github.com/rust-lang/compiler-builtins/issues/353
+  ~/.cargo/bin/rustup toolchain install 1.43.0 && ~/.cargo/bin/rustup default 1.43.0 && \
   ~/.cargo/bin/rustup target add arm-unknown-linux-gnueabihf && \
   pip3 install meson
 
