--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -44,7 +44,7 @@ jobs:
           - 'win32-x64'
         experimental: [false]
         include:
-          - os: macos-latest
+          - os: macos-10.15
             platform: 'darwin-x64'
             experimental: true
     steps:
