Build libvips with its dependencies statically-linked (#39) (#44)
* Enable Quartz surface backend on macOS to prevent linker errors when building librsvg
* Ninja build symlink is no longer needed
* Downgrade Rust to 1.43.0 for ARM targets
* Enable Rust optimisation flags globally

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -2,7 +2,7 @@ name: Build Release
 on:
   push:
     tags:
-    - v*
+      - v*
 jobs:
   create-release:
     runs-on: 'ubuntu-latest'
@@ -26,11 +26,14 @@ jobs:
         name: upload-url
         path: upload-url.txt
   build:
-    runs-on: 'ubuntu-latest'
+    runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.experimental }}
     needs:
       - 'create-release'
     strategy:
+      fail-fast: false
       matrix:
+        os: [ubuntu-latest]
         platform:
           - 'linux-x64'
           - 'linuxmusl-x64'
@@ -39,6 +42,11 @@ jobs:
           - 'linux-arm64v8'
           - 'win32-ia32'
           - 'win32-x64'
+        experimental: [false]
+        include:
+          - os: macos-10.15
+            platform: 'darwin-x64'
+            experimental: true
     steps:
     - uses: actions/checkout@v1
     - name: Fetch GitHub Release upload URL
@@ -50,10 +58,22 @@ jobs:
       run: |
         echo "::set-env name=upload_url::$(cat upload-url/upload-url.txt)"
         echo "::set-env name=asset_file_name::libvips-$(cat LIBVIPS_VERSION)-${{ matrix.platform }}.tar.gz"
+    - name: Install dependencies (macOS)
+      run: |
+        pip3 install meson ninja
+        brew install advancecomp automake nasm pkg-config
+      if: matrix.os == 'macos-latest'
+    - name: Setup toolchain (macOS)
+      shell: bash
+      run: |
+        echo "::set-env name=CC::clang"
+        echo "::set-env name=CXX::clang++"
+        echo "::set-env name=MACOSX_DEPLOYMENT_TARGET::10.9"
+      if: matrix.os == 'macos-latest'
     - name: Build ${{ matrix.platform }}
       run: ./build.sh $(cat LIBVIPS_VERSION) ${{ matrix.platform }}
     - name: Upload Release Asset
-      id: upload-release-asset 
+      id: upload-release-asset
       uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
