--- a/linux-armv7/Dockerfile
+++ b/linux-armv7/Dockerfile
@@ -26,13 +26,14 @@ RUN \
     libtool \
     nasm \
     ninja-build \
-    patchelf \
     python3-pip \
     texinfo \
     && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y && \
+  # Downgrade to 1.43.0, see: https://github.com/rust-lang/compiler-builtins/issues/353
+  ~/.cargo/bin/rustup toolchain install 1.43.0 && ~/.cargo/bin/rustup default 1.43.0 && \
   ~/.cargo/bin/rustup target add arm-unknown-linux-gnueabihf && \
-  pip3 install meson==0.53.2
+  pip3 install meson
 
 # Compiler settings
 ENV \
@@ -40,7 +41,8 @@ ENV \
   PKG_CONFIG="/usr/bin/arm-linux-gnueabihf-pkg-config" \
   PLATFORM="linux-armv7" \
   CHOST="arm-linux-gnueabihf" \
-  FLAGS="-marm -march=armv7-a -mfpu=neon-vfpv4 -mfloat-abi=hard -s -O3 -fPIC -D_GLIBCXX_USE_CXX11_ABI=0" \
+  RUST_TARGET="arm-unknown-linux-gnueabihf" \
+  FLAGS="-marm -march=armv7-a -mfpu=neon-vfpv4 -mfloat-abi=hard -O3 -fPIC -D_GLIBCXX_USE_CXX11_ABI=0" \
   MESON="--cross-file=/root/meson.ini"
 
 COPY Toolchain.cmake /root/
