--- a/linux-x64/Dockerfile
+++ b/linux-x64/Dockerfile
@@ -20,13 +20,11 @@ RUN \
     jq \
     nasm \
     ninja-build \
-    patchelf \
     prelink \
     python3 \
     && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y && \
   ln -s /usr/bin/cmake3 /usr/bin/cmake && \
-  ln -s /usr/bin/ninja-build /usr/bin/ninja && \
   pip3 install meson
 
 # Compiler settings
@@ -35,6 +33,9 @@ ENV \
   CXX="/opt/rh/devtoolset-8/root/usr/bin/g++" \
   PATH="/root/.cargo/bin:$PATH" \
   PLATFORM="linux-x64" \
-  FLAGS="-s -O3 -fPIC"
+  RUST_TARGET="x86_64-unknown-linux-gnu" \
+  FLAGS="-O3 -fPIC" \
+  MESON="--cross-file=/root/meson.ini"
 
 COPY Toolchain.cmake /root/
+COPY meson.ini /root/
