--- a/linux-arm64v8/Dockerfile
+++ b/linux-arm64v8/Dockerfile
@@ -13,6 +13,7 @@ RUN \
     advancecomp \
     autoconf \
     autopoint \
+    brotli \
     cmake \
     crossbuild-essential-arm64 \
     gettext \
