Use a minimal profile when installing Rust
+ install the Rust toolchain in /usr/local/.

--- a/linux-x64/Dockerfile
+++ b/linux-x64/Dockerfile
@@ -3,6 +3,12 @@ LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
 # Create CentOS 7 (glibc 2.17) container suitable for building Linux x64 binaries
 
+# Path settings
+ENV \
+  RUSTUP_HOME="/usr/local/rustup" \
+  CARGO_HOME="/usr/local/cargo" \
+  PATH="/usr/local/cargo/bin:/opt/rh/devtoolset-9/root/usr/bin:$PATH"
+
 # Build dependencies
 RUN \
   yum update -y && \
@@ -24,13 +30,15 @@ RUN \
     prelink \
     python3 \
     && \
-  curl https://sh.rustup.rs -sSf | sh -s -- -y && \
+  curl https://sh.rustup.rs -sSf | sh -s -- -y \
+    --no-modify-path \
+    --profile minimal \
+    && \
   ln -s /usr/bin/cmake3 /usr/bin/cmake && \
   pip3 install meson
 
 # Compiler settings
 ENV \
-  PATH="/root/.cargo/bin:/opt/rh/devtoolset-9/root/usr/bin:$PATH" \
   PLATFORM="linux-x64" \
   FLAGS="-O3 -fPIC" \
   MESON="--cross-file=/root/meson.ini"
