--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -35,7 +35,7 @@ jobs:
           - 'linux-arm64v8'
           - 'win32-ia32'
           - 'win32-x64'
-          - 'win32-arm64'
+          - 'win32-arm64v8'
         experimental: [false]
         include:
           - os: macos-10.15
