--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -30,6 +30,7 @@ jobs:
         platform:
           - 'linux-x64'
           - 'linuxmusl-x64'
+          - 'linuxmusl-arm64v8'
           - 'linux-armv6'
           - 'linux-armv7'
           - 'linux-arm64v8'
