--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -39,7 +39,9 @@ jobs:
         experimental: [false]
         include:
           - os: macos-10.15
-            platform: 'darwin-x64'
+            platform:
+              - 'darwin-x64'
+              - 'darwin-arm64'
             experimental: true
     steps:
     - name: Checkout
@@ -48,7 +50,7 @@ jobs:
       run: |
         pip3 install meson ninja
         brew install advancecomp automake brotli nasm pkg-config
-      if: matrix.platform == 'darwin-x64'
+      if: matrix.platform == 'darwin-x64' || matrix.platform == 'darwin-arm64'
     - name: Build ${{ matrix.platform }}
       id: build-release
       run: |
