mac: relativize paths and remove the hardcoded homebrew prefix

--- a/darwin-arm64v8/meson.ini
+++ b/darwin-arm64v8/meson.ini
@@ -12,5 +12,5 @@ objcpp = 'clang++'
 ar = 'ar'
 strip = 'strip'
 
-pkg-config = '/usr/local/bin/pkg-config'
-cmake = '/usr/local/bin/cmake'
+pkg-config = 'pkg-config'
+cmake = 'cmake'
