--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -46,7 +46,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Install dependencies (macOS)
       run: |
-        pip3 install meson==0.55.3 ninja
+        pip3 install meson ninja
         brew install advancecomp automake brotli nasm pkg-config
       if: matrix.platform == 'darwin-x64'
     - name: Build ${{ matrix.platform }}
