--- a/linuxmusl-x64/Dockerfile
+++ b/linuxmusl-x64/Dockerfile
@@ -41,7 +41,7 @@ RUN \
     --no-modify-path \
     --profile minimal \
     && \
-  pip3 install meson==0.55.3
+  pip3 install meson
 
 # Compiler settings
 ENV \
