--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -39,9 +39,10 @@ jobs:
         experimental: [false]
         include:
           - os: macos-10.15
-            platform:
-              - 'darwin-x64'
-              - 'darwin-arm64v8'
+            platform: 'darwin-x64'
+            experimental: true
+          - os: macos-10.15
+            platform: 'darwin-arm64v8'
             experimental: true
     steps:
     - name: Checkout
