Use Ubuntu Bionic for building linux-arm64v8

--- a/linux-arm64v8/Dockerfile
+++ b/linux-arm64v8/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:bullseye
+FROM --platform=linux/amd64 ubuntu:bionic
 LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
 # Create Debian-based container suitable for cross-compiling Linux ARM64v8-A binaries
@@ -9,10 +9,20 @@ ENV \
   CARGO_HOME="/usr/local/cargo" \
   PATH="/usr/local/cargo/bin:$PATH"
 
+COPY sources.list /etc/apt/sources.list
+
 # Build dependencies
 RUN \
   apt-get update && \
-  apt-get install -y curl && \
+  apt-get install -y \
+    curl \
+    apt-transport-https \
+    gnupg \
+    software-properties-common \
+    && \
+  curl https://apt.kitware.com/keys/kitware-archive-latest.asc | apt-key add - && \
+  apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main' && \
+  apt-get update && \
   dpkg --add-architecture arm64 && \
   apt-get update && \
   apt-get install -y \
@@ -21,7 +31,8 @@ RUN \
     autopoint \
     brotli \
     cmake \
-    crossbuild-essential-arm64 \
+    dpkg-cross \
+    g++-8-aarch64-linux-gnu \
     gettext \
     git \
     gobject-introspection \
@@ -35,6 +46,17 @@ RUN \
     ninja-build \
     python3-pip \
     texinfo \
+    && \
+  update-alternatives \
+    --install /usr/bin/aarch64-linux-gnu-gcc aarch64-linux-gnu-gcc /usr/bin/aarch64-linux-gnu-gcc-8 100 \
+    --slave /usr/bin/aarch64-linux-gnu-cpp aarch64-linux-gnu-cpp /usr/bin/aarch64-linux-gnu-cpp-8 \
+    --slave /usr/bin/aarch64-linux-gnu-g++ aarch64-linux-gnu-g++ /usr/bin/aarch64-linux-gnu-g++-8 \
+    --slave /usr/bin/aarch64-linux-gnu-gcc-ar aarch64-linux-gnu-gcc-ar /usr/bin/aarch64-linux-gnu-gcc-ar-8 \
+    --slave /usr/bin/aarch64-linux-gnu-gcc-nm aarch64-linux-gnu-gcc-nm /usr/bin/aarch64-linux-gnu-gcc-nm-8 \
+    --slave /usr/bin/aarch64-linux-gnu-gcc-ranlib aarch64-linux-gnu-gcc-ranlib /usr/bin/aarch64-linux-gnu-gcc-ranlib-8 \
+    --slave /usr/bin/aarch64-linux-gnu-gcov aarch64-linux-gnu-gcov /usr/bin/aarch64-linux-gnu-gcov-8 \
+    --slave /usr/bin/aarch64-linux-gnu-gcov-dump aarch64-linux-gnu-gcov-dump /usr/bin/aarch64-linux-gnu-gcov-dump-8 \
+    --slave /usr/bin/aarch64-linux-gnu-gcov-tool aarch64-linux-gnu-gcov-tool /usr/bin/aarch64-linux-gnu-gcov-tool-8 \
     && \
   curl https://sh.rustup.rs -sSf | sh -s -- -y \
     --no-modify-path \
